# Ferrite

./: .gitignore  README.md
skins-example/sunset/: skin.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/skins/: amber.json  ice.json  magenta.json  paper.json
src-tauri/src/: commands.rs  main.rs  settings.rs  skins.rs  state.rs
src-tauri/src/dsp/: equalizer.rs  fft.rs  mod.rs
src-tauri/src/player/: mod.rs
src/css/: components.css  tokens.css
src/js/: api.js  equalizer.js  events.js  main.js  player.js  playlist.js  skins.js  store.js  visualizer.js  windowctl.js
