[package]
name = "ferrite2"
version = "0.1.0"
description = "Ferrite — a variation of the Winamp-style music player"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = { version = "0.21.1", features = ["playback", "symphonia-all"] }
biquad = "0.5"
rustfft = "6.4.1"
# lofty = "0.22.4"
base64 = "0.22"
include_dir = "0.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
